<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoterDetails">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/voter_details"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/falling_sky_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.047">

        <ImageView
            android:id="@+id/user_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/img_voter"
            android:scaleType="centerInside"
            android:src="@drawable/vectorlogo" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/falling_sky_black"
            android:gravity="center"
            android:text="@string/labelPhoto"
            android:textColor="@color/black"
            tools:ignore="TextSizeCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="@integer/material_motion_duration_short_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/caviar_dream_bold"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/labelName"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/viewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:fontFamily="@font/caviar_dream_bold"
                android:textSize="15sp"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/caviar_dream_bold"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/labelGender"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/viewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:fontFamily="@font/caviar_dream_bold"
                android:textSize="15sp"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/caviar_dream_bold"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/labelAge"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/viewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:fontFamily="@font/caviar_dream_bold"
                android:textSize="15sp"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/caviar_dream_bold"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                android:text="@string/labelAddress"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/viewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:fontFamily="@font/caviar_dream_bold"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/caviar_dream_bold"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                android:text="@string/labelPhone"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/ViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:fontFamily="@font/caviar_dream_bold"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/caviar_dream_bold"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                android:text="@string/labelWard"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/viewWard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="20dp"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:fontFamily="@font/caviar_dream_bold"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_vote"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/btn_vote" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>